modif front size of player vue

--- a/synctube_front/public/index.html
+++ b/synctube_front/public/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Goldman&display=swap"
       rel="stylesheet"
     />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>synctube</title>
   </head>
   <body>
     <noscript>
